@@ -24,7 +24,7 @@ CHANGELOG
 
 Boost V1.34.0
 - Wave Version 1.2.4
-- Added the possibility to explicitely enable/disable the generation of #line 
+- Added the possibility to explicitly enable/disable the generation of #line 
   directives. Added a corresponding commandline argument to the Wave driver 
   tool (--line/-L) which takes either 0 or 1 as its parameter.
 - Added support for #pragma wave option(command: value) directives, which 
@@ -167,6 +167,11 @@ Boost V1.34.0
 - Added a couple of new test cases to verify various diagnostics.
 - Fixed wave applet not to report missing #endif's when in interactive mode.
 - Cleaned up the Re2C lexer code.
+- Fixed a bug, where a empty line followed by an arbitrary token and followed 
+  by a preprocessing directive interpreted the preprcessing directive as if it
+  were the first non-whitespace token on the line. This error occured only
+  if the #line directive generation was suppressed. Thanks to Joan Grant for
+  reporting this problem.
 
 Sat Feb 18 2005
 - Version 1.2.3
